tests/should_fail/struct_missing_field.nv
module main

// SHOULD FAIL: struct missing a required field
struct Person { name: String, age: Int }
let p = Person { name: "Alice" }
